--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vuex": "^3.5.1",
-    "axios": "^0.20.0"
+    "axios": "^0.20.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
