--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-ver2-test",
+  "name": "product-images-manager",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,12 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vuex": "^3.5.1",
     "axios": "^0.20.0",
+    "core-js": "^3.6.5",
     "node-sass": "^4.14.1",
-    "sass-loader": "^10.0.2"
+    "vue": "^2.6.11",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -22,7 +21,10 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.44.2"
   },
   "eslintConfig": {
     "root": true,
